--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,11 @@
   "name": "bctc",
   "version": "0.1.0",
   "private": true,
+  "proxy": {
+    "/api/users/": {
+      "target": "http://localhost:3001"
+    }
+  },
   "dependencies": {
     "jquery": "^3.2.1",
     "react": "^15.6.1",
