--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "client": "npm run start --prefix client",
+    "server": "nodemon ./bin/www",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
     "body-parser": "~1.17.1",
+    "concurrently": "^3.5.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "hjs": "~0.0.6",
     "morgan": "~1.8.1",
+    "nodemon": "^1.11.0",
     "serve-favicon": "~2.4.2"
   }
 }
