--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,13 @@
     }
   },
   "dependencies": {
+    "axios": "^0.16.2",
+    "history": "^4.6.3",
     "jquery": "^3.2.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-router": "^4.1.2",
+    "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.10"
   },
   "scripts": {
